# pathways-task-reminder

./: README.md  app.py  pyproject.toml  requirements.txt
pathways_task_reminder/: app.py  constants.py  pdf_table_parser.py  student_reporter.py
pathways_task_reminder/utils/: dataframe.py  enumerable.py  html.py  pdf_processing.py  version.py
tests/: conftest.py  test_pdf_table_parser.py  test_student_reporter.py
tests/utils/: test_pdf_processing.py
utils/: pdf_processing.py
