[project]
name = "pathways-task-reminder"
version = "1.0.4"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "fitz>=0.0.1.dev2",
    "html2image>=2.0.5",
    "ipdb>=0.13.13",
    "ipython>=8.30.0",
    "matplotlib>=3.9.3",
    "opencv-python>=4.10.0.84",
    "pandas>=2.2.3",
    "pymupdf>=1.24.14",
    "pytest>=8.3.4",
    "streamlit>=1.40.2",
    "tabulate>=0.9.0",
]
